syntax = "proto3";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
    package_name: "de.maxbundscherer.akka.serializationcomparision.persistence.protobuf"
    flat_package: true
};

message CarDb {
    int32 id = 1;
    int32 horsepower = 2;
    string name = 3;
}

message ComplexCarDb {
    int32 id = 1;
    int32 horsepower = 2;
    string name = 3;
    float fuelConsumption = 4;
    bool dieselEngine = 5;
    bool seatAdjustment = 6;
    double fuelTank = 7;
    double brakingDistance = 8;
    string notes = 9;
}

message AddCarEvtDb {
    CarDb value = 1 [(scalapb.field).no_box = true]; //Required
}

message UpdateCarEvtDb {
    CarDb value = 1 [(scalapb.field).no_box = true]; //Required
}

message AddComplexCarEvtDb {
    ComplexCarDb value = 1 [(scalapb.field).no_box = true]; //Required
}

message UpdateComplexCarEvtDb {
    ComplexCarDb value = 1 [(scalapb.field).no_box = true]; //Required
}

message CarGarageStateDb {
    map<int32, CarDb> cars = 1;
    map<int32, ComplexCarDb> complexCars = 2;
}